Tweaks to risk validation and team access

--- a/app/views/psd-cases-area/notifications/add-assessment.html
+++ b/app/views/psd-cases-area/notifications/add-assessment.html
@@ -26,7 +26,7 @@
       </div>
       <h2 class="govuk-heading-m">Related risk assessments</h2>
         <p class="govuk-body">There are no risk assessments for All in All+ Car Seat, Dragon Kingdom CT4262. To conduct a new risk assessment, use the 'Risk Assessments' section of the Product Safety Database.</p>
-      <a class="govuk-button govuk-button data-module="govuk-button" role="button" draggable="false" href="attach-risk-assessment">Attach existing risk assessment</a>
+      <a class="govuk-button govuk-button--secondary data-module="govuk-button" role="button" draggable="false" href="attach-risk-assessment">Attach existing risk assessment</a>
 </form> 
   </div>
 </div>
