--- a/app/views/psd-cases-area/notifications/assign-notification-overview.html
+++ b/app/views/psd-cases-area/notifications/assign-notification-overview.html
@@ -36,7 +36,7 @@
  <span class="govuk-caption-l">All in All+ Car Seat – lack of protection from the buckle</span>
  <h1 class="govuk-heading-l">Manage notification and team access</h1>
 
-<p>Assign the notification to a different team or individual, and manage team permissions to view or edit the notification details.</p>
+<p>Reassign the notification to a specific team or individual and adjust their editing permissions. Notification owners have the exclusive ability to add or remove teams, manage team permissions, and reassign the notification owner.</p>
 
 <!-- <div class="govuk-inset-text">
   <p class="govuk-body govuk-!-margin-bottom-0">For</p>
