--- a/app/views/psd-cases-area/notifications/assign-notification.html
+++ b/app/views/psd-cases-area/notifications/assign-notification.html
@@ -30,7 +30,7 @@
 
   <h2 class="govuk-heading-m">Select new notification owner</h2>
 
-  <p style="width:70%">The new owner will be notified via email that they have been assigned to this notification. Teams currently with view only or edit permissions will receive full ownership rights if selected.</p>
+  <p style="width:70%">The new owner will be notified via email that they have been assigned to this notification. Teams currently with edit permissions will receive full ownership rights, which includes the ability to add or remove teams, manage team permissions, and reassign the notification owner.</p>
 
 <div class="govuk-form-group">
 
