--- a/app/views/psd-cases-area/notifications/check-submit.html
+++ b/app/views/psd-cases-area/notifications/check-submit.html
@@ -464,20 +464,20 @@
               </a>
             </dd>
           </div>
-          <div class="govuk-summary-list__row">
+          <!-- <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Has the risk level been validated?
+              Has the notification risk level been validated?
             </dt>
             <dd class="govuk-summary-list__value">
            
-         No
+        Validated by OPSS Processing on 16 January 2024
      
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">Change
+              <a class="govuk-link" href="risk-level-validation">Change
               </a>
             </dd>
-          </div>
+          </div> -->
         </dl>
 
 
