--- a/app/views/psd-cases-area/notifications/edit-submitted.html
+++ b/app/views/psd-cases-area/notifications/edit-submitted.html
@@ -140,10 +140,10 @@
               Risk validated
             </dt>
             <dd class="govuk-summary-list__value">
-             Yes
+              Validated by OPSS Processing on 16 January 2024
             </dd>
             <dd class="govuk-summary-list__actions">
-             <a class="govuk-link" href="#">Change
+             <a class="govuk-link" href="risk-level-validation">Change
               </a>
             </dd>
           </div>
