--- a/app/views/psd-cases-area/notifications/task-list.html
+++ b/app/views/psd-cases-area/notifications/task-list.html
@@ -337,7 +337,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
       <li class="app-task-list__item">
       <span class="app-task-list__task-name">
-        <a href="added-risk-assessment-summary">Create or add risk assessment</a></span>
+        <a href="added-risk-assessment-summary">Add risk assessment</a></span>
        <strong class="govuk-tag app-task-list__tag" id="company-information-status">Completed</strong>
       </li>
       <li class="app-task-list__item">
@@ -402,7 +402,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
       <li class="app-task-list__item">
       <span class="app-task-list__task-name">
-        <a href="product-choice-assessment">Create or add risk assessment</a></span>
+        <a href="product-choice-assessment">Add risk assessment</a></span>
        <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="medical-information-status">Not started</strong>
       </li>
       <li class="app-task-list__item">
@@ -434,7 +434,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
       <li class="app-task-list__item">
       <span class="app-task-list__task-name">
-        <a href="product-choice-assessment">Create or add risk assessment</a></span>
+        <a href="product-choice-assessment">Add risk assessment</a></span>
        <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="medical-information-status">Not started</strong>
       </li>
       <li class="app-task-list__item">
@@ -468,7 +468,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
       <li class="app-task-list__item">
       <span class="app-task-list__task-name">
-        <a href="add-assessment">Create or add risk assessment</a></span>
+        <a href="add-assessment">Add risk assessment</a></span>
       <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="medical-information-status">Not started</strong>
 
       </li>
@@ -504,7 +504,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
       <li class="app-task-list__item">
       <span class="app-task-list__task-name">
-        Create or add risk assessment</span>
+       Add risk assessment</span>
        <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="medical-information-status">Cannot start yet</strong>
 
       </li>
