Tweaks to risk validation

--- a/app/views/psd-cases-area/notifications/add-assessment.html
+++ b/app/views/psd-cases-area/notifications/add-assessment.html
@@ -16,7 +16,7 @@
 {% block content %}
 
  <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
+  <div class="govuk-grid-column-two-thirds">
 
       <span class="govuk-caption-l">{{title}}</span>
       <h1 class="govuk-heading-l">Add risk assessment</h1>
@@ -25,7 +25,7 @@
         <p class="govuk-body-l">All in All+ Car Seat, Dragon Kingdom CT4262</p>
       </div>
       <h2 class="govuk-heading-m">Related risk assessments</h2>
-        <p class="govuk-body">There are no risk assessments for All in All+ Car Seat, Dragon Kingdom CT4262. To conduct a new risk assessment, use the 'Risk Assessments' section of the Product Safety Database.</p>
+        <p class="govuk-body">There are no risk assessments for All in All+ Car Seat, Dragon Kingdom CT4262. <b>To conduct a new risk assessment</b>, use the 'Risk Assessments' section of the Product Safety Database.</p>
       <a class="govuk-button govuk-button--secondary data-module="govuk-button" role="button" draggable="false" href="attach-risk-assessment">Attach existing risk assessment</a>
 </form> 
   </div>
