--- a/app/views/psd-cases-area/notifications/edit-submitted.html
+++ b/app/views/psd-cases-area/notifications/edit-submitted.html
@@ -140,7 +140,7 @@
               Risk validated
             </dt>
             <dd class="govuk-summary-list__value">
-              Validated by OPSS Processing on 16 January 2024
+              {{ data['validation'] }}
             </dd>
             <dd class="govuk-summary-list__actions">
              <a class="govuk-link" href="risk-level-validation">Change
