--- a/app/views/psd-revised-flow/add-business-to-notification/enter-business-details.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/enter-business-details.html
@@ -17,6 +17,15 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
 
 {% block content %}
 
+<script>
+  const checkbox = document.getElementById('business-details-registered_1');
+
+  checkbox.addEventListener('change', function () {
+    // Store checkbox state in local storage
+    localStorage.setItem('checkboxState', checkbox.checked);
+  });
+</script>
+
  <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
@@ -357,6 +366,18 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
 </select>
 </div>
 
+<div class="govuk-form-group govuk-!-margin-bottom-7">
+  <label class="govuk-label" for="registered">Registered address</label>
+  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="business-details-registered_1" name="business-details-registered" type="checkbox" value="yes" data-behaviour="exclusive">
+      <label class="govuk-label govuk-checkboxes__label" for="business-details-registered_1">
+        This is the business's registered address
+      </label>
+    </div>
+  </div>
+</div>
+
 <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
   Add another address
 </button>
@@ -408,7 +429,6 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
   </button>
 
 </div>
-
 
 </form>
 
