--- a/app/views/psd-revised-flow/add-business-to-notification/search-companies-house.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/search-companies-house.html
@@ -96,7 +96,7 @@
         <td class="govuk-table__cell"><a href="business-cunningham">Cunningham Products Ltd</a></td>
         <td class="govuk-table__cell">Active</td>
         <td class="govuk-table__cell">02076315</td>
-        <td class="govuk-table__cell">Unit 34, Purley Industrial Estate, Grantham Road, Barnsley, S71 5GY, UK</td>
+        <td class="govuk-table__cell">34 Valley Estate, Grantham Road, Barnsley, S71 5GY, UK</td>
       </tr>
       <tr>
         <td class="govuk-table__cell"><a href="#">Cuno Arts Supplies</a></td>
