--- a/app/assets/sass/psd-menu.scss
+++ b/app/assets/sass/psd-menu.scss
@@ -880,3 +880,17 @@ ul#navigation.psd-header__navigation {
     display: none;
   }
 }
+
+.small-tag {
+  display: inline-block;
+  background-color: #E5E6E7;
+  font-family: "GDS Transport", arial, sans-serif;
+  color: #0b0c0c;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 2px 6px;
+  border-radius: 0px; 
+  letter-spacing: 0px;
+  margin-left: 15px;
+}
+
