--- a/app/views/psd-revised-flow/add-business-to-notification/business-blank.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-blank.html
@@ -69,7 +69,8 @@
           {% endif %}
         {% endfor %}
       
-        {{ rolesString }}
+        {{ rolesString }} 
+        
                         </dt>
                         <dd class="govuk-summary-list__actions">
                           <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
@@ -94,7 +95,7 @@
               <p class="govuk-body">{{ data['business-details-phone'] }}</p>
               <p class="govuk-body">
                 {% set roles = [data['business-details-address_1'], data['business-details-address_2'], data['business-details-city'], data['business-details-county'], 
-                data['business-details-postcode'], data['business-details-country']] %}
+                data['business-details-postcode'], data['business-details-country'], data['business-details-registered']] %}
 
 {% set rolesString = "" %}
 {% for role in roles %}
@@ -107,7 +108,9 @@
   {% endif %}
 {% endfor %}
 
-{{ rolesString }}
+{{ rolesString }} 
+
+
               </p>
         
           </dd>
@@ -132,6 +135,8 @@
 
 </div>
 </div>
+
+
 
 
   {% endblock %}
