--- a/app/views/psd-revised-flow/add-business-to-notification/business-cunningham.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-cunningham.html
@@ -66,7 +66,8 @@
 
                   <dl class="govuk-summary-list">
                       <div class="govuk-summary-list__row">
-                        Unit 34, Purley Industrial Estate, Grantham Road, Barnsley, S71 5GY, United Kingdom
+                        34 Valley Estate, Grantham Road, Barnsley, S71 5GY, United Kingdom <span class="small-tag">Registered address</span>
+
                         </dt>
                         <dd class="govuk-summary-list__actions">
                           <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
@@ -79,7 +80,7 @@
          
         <h2 class="govuk-heading-m govuk-!-margin-top-8">Contact details</h2>
 
-        <dl class="govuk-summary-list govuk-!-padding-bottom-0">
+        <dl class="govuk-summary-list ">
           <div class="govuk-summary-list__row ">
             <p class="govuk-body ">None available</p>
 
